--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -1,14 +1,132 @@
-body{
+body, main{
     margin: 0;
     padding: 0;
     height: 100vh;
     width: 100vw;
 }
+main{
+    display: grid;
+    grid-template: 
+        "header header" auto
+        "tools  sketch" 1fr /
+        auto 1fr;
+    background-color: rgba(150, 150, 150, .65);
+}
+header{
+    grid-area: header;
+    text-align: center;
+    background: linear-gradient(90deg, grey 15%, white 85%);
+    color: rgba(239, 70, 70, 0.851);
+}
+.toolset{
+    height: 100%;
+    width: 100%;
+    grid-area: tools;
+}
+.toolset-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    gap: 1rem;
+}
+.toolset-wrapper--styling{
+    height: 100%;
+}
+.toolset__tools{
+    padding: 2rem;
+}
+#board-size{
+    padding: .5rem 1rem;
+}
+#color-picker{
+    padding: .01rem .01rem;
+    width: 125px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: .5rem .5rem;
+}
+.toolset__tools button{
+    background-color: rgba(150, 150, 150, .65);
+    padding: 1rem 4rem;
+    text-align: center;
+}
 .board-container{
+    grid-area: sketch;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 .board{
+    height: 500px;
+    width: 500px;  
+    background-color: white;
+    border-top: red groove;
+    border-left: red groove;
+    border-right: red groove;
+    border-bottom: red groove;
+    border-width: 2.5rem 2.5rem 7rem 2.5rem;
+    border-radius: 50px 50px 50px 50px;
+}
+
+/*
+#top{
+    position: absolute;
+    top: 18.2%;
+    left: 14%;
+    height: 50px;
+    width: 670px;
+    border-top: 10px ridge yellow;
+    border-left: 10px ridge yellow;
+    border-right: 10px ridge yellow;
+    border-radius: 10px 10px 0 0;
+}
+#left{
+    border-left: 10px ridge yellow;
+}
+#right{
+    border-right: 10px ridge yellow;
+}
+span{
+    background-color: yellow;
+    height: 520px;
+    width: 82.2px;
+    margin: 0;
+}
+#bottom{
+    position: absolute;
+    bottom: 7.8%;
+    left: 14%;
+    height: 150px;
+    width: 670px;
+    border-bottom: 10px ridge yellow;
+    border-left: 10px ridge yellow;
+    border-right: 10px ridge yellow;
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+button{
+    padding: 32px;
+}
+.dial{
+    background-color: black;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+}*/
+.screen{
     display: grid;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    place-items: center;
+}
+.square{
+    background-color: lightgrey;
+    padding: 0;
+    margin: 0;
 }
